# camellia2

./: CMakeLists.txt  CamelliaConfig.cmake.in  README.txt  camellia.dox.in
drivers/: CMakeLists.txt
drivers/Brendan/: CMakeLists.txt  GoalOrientedDPGDriver.cpp  GoalOrientedOldroydBDriver.cpp  LinearElasticity2D.cpp  LinearElasticity3D.cpp  LinearElasticity3DGMG.cpp  OldroydBDriver.cpp
drivers/Convection/: ConvectingConeDriver.cpp  SpaceTimePrototypeConvectingConeDriver.cpp
drivers/DPGTests/: CMakeLists.txt  LinearTermTests.cpp
drivers/Preconditioning/: CMakeLists.txt  ConditionNumberTestsDriver.cpp  MultigridPreconditioningDriver.cpp  NavierStokesCavityFlowGMGDriver.cpp  PreconditioningTestsDriver.cpp
examples/: CMakeLists.txt
examples/BrioWuShockTube/: BrioWuShockTubeExample.cpp  CMakeLists.txt
examples/CGAdvectionExplicit/: CGAdvectionExplicitExample.cpp  CMakeLists.txt
examples/CircularlyPolarizedAlfvenWave/: CMakeLists.txt  CircularlyPolarizedAlfvenWaveExample.cpp
examples/ConvectingCone/: CMakeLists.txt  ConvectingConeExample.cpp
examples/ConvectionReactionDiffusion/: CMakeLists.txt  ConvectionDiffusionExample.cpp  PoissonHessianGradientIndicatorExperiment.cpp
examples/DGAdvection/: CMakeLists.txt
examples/DPGAdvection/: CMakeLists.txt
examples/HeatSpaceTime/: CMakeLists.txt
examples/MOABReader/: CMakeLists.txt  MOABReaderExample.cpp
examples/NavierStokesCavityFlow/: CMakeLists.txt  NavierStokesCavityFlowExample.cpp
examples/Poisson1D/: CMakeLists.txt  Poisson1D.cpp
examples/Poisson1DMOAB/: CMakeLists.txt  Poisson1DMOAB.cpp
examples/Poisson2DTriangles/: CMakeLists.txt  Poisson2DTriangles.cpp
examples/PoissonPrimal/: CMakeLists.txt
examples/SodShockTube/: CMakeLists.txt  SodShockTubeExample.cpp  StandingShockConservationFormExample.cpp  StandingShockExample.cpp
examples/StokesBackwardFacingStep/: CMakeLists.txt
examples/StokesCavityFlow/: CMakeLists.txt  StokesGramOutput.cpp
manual-examples/: CMakeLists.txt
manual-examples/ch03-StokesCavity/: CMakeLists.txt  ch03-StokesCavity.cpp
manual-examples/ch04-NavierStokesCavity/: CMakeLists.txt  ch04-NavierStokesCavity.cpp
manual-examples/ch05-Formulations/: CMakeLists.txt  ch05-NavierStokesCavity.cpp  ch05-PoissonHomogeneous.cpp  ch05-StokesCavity.cpp
src/Basis/: BasisCache.cpp
src/CellTools/: CamelliaCellTools.cpp
src/ConvergenceStudy/: HConvergenceStudy.cpp
src/DofOrdering/: DofOrdering.cpp
src/Formulations/: CompressibleNavierStokesConservationForm.cpp  CompressibleNavierStokesFormulation.cpp  CompressibleNavierStokesFormulationRefactor.cpp  CompressibleNavierStokesFormulationRefactor.hpp  CompressibleNavierStokesProblem.cpp  CompressibleNavierStokesProblem.hpp  ConvectionDiffusionReactionFormulation.cpp  IdealMHDFormulation.cpp  InviscidBurgersFormulation.cpp  LinearElasticityFormulation.cpp  NavierStokesVGPFormulation.cpp  OldroydBFormulationUW.cpp  OldroydBFormulationUWReduced.cpp  PoissonFormulation.cpp  SpaceTimeCompressibleFormulation.cpp  SpaceTimeConvectionDiffusionFormulation.cpp  SpaceTimeHeatDivFormulation.cpp  SpaceTimeHeatFormulation.cpp  SpaceTimeIncompressibleFormulation.cpp  StokesVGPFormulation.cpp
src/Function/: AbsFunction.cpp  AbsFunction.h  BCFunction.cpp  BasisSumFunction.cpp  ExpFunction.cpp  Function.cpp  Functions.cpp  MeshTransformationFunction.cpp  MinMaxFunctions.cpp  ParameterFunction.cpp  ParametricCurve.cpp  ParametricSurface.cpp  PolarizedFunction.cpp  PreviousSolutionFunction.cpp  ProductFunction.cpp  QuotientFunction.cpp  SimpleSolutionFunction.cpp  SpatiallyFilteredFunction.cpp  SumFunction.cpp  TrigFunctions.cpp  UpwindIndicatorFunction.cpp  VarFunction.cpp  VectorizedFunction.cpp
src/IO/: GnuPlotUtil.cpp  HDF5Exporter.cpp
src/MatrixUtilities/: SerialDenseWrapper.cpp
src/Mesh/: Boundary.cpp  Cell.cpp  CellDataMigration.cpp  DofInterpreter.cpp  GDAMaximumRule2D.cpp  GDAMinimumRule.cpp  GlobalDofAssignment.cpp  LocalDofMapper.cpp  MOABReader.cpp  Mesh.cpp  MeshFactory.cpp  MeshTopology.cpp  MeshTopologyView.cpp  ZoltanMeshPartitionPolicy.cpp
src/Problem/: RHS.cpp
src/Projection/: Projector.cpp
src/ScratchPad/: BF.cpp  IP.cpp  LinearTerm.cpp  OperatorOverloads.cpp  Var.cpp  VarFactory.cpp
src/Solution/: AnisotropicRefinementStrategy.cpp  CondensedDofInterpreter.cpp  DLS.cpp  GMGOperator.cpp  GMGSolver.cpp  RefinementStrategy.cpp  RieszRep.cpp  Solution.cpp  Solver.cpp
src/TestingUtilities/: TestingUtilities.cpp
src/TimeIntegration/: TimeIntegrator.cpp
src/include/: BCFunction.h  BF.h  BasisDef.h  Boundary.h  Camellia.h  Cell.h  CellDataMigration.h  CompressibleNavierStokesConservationForm.hpp  CompressibleNavierStokesFormulationRefactor.hpp  CompressibleProblems.h  CondensedDofInterpreter.h  ConvectionDiffusionReactionFormulation.h  DLS.h  DofInterpreter.h  DofOrdering.h  ExpFunction.h  Function.h  Functions.hpp  GDAMinimumRule.h  GMGSolver.h  GlobalDofAssignment.h  HDF5Exporter.h  IP.h  IdealMHDFormulation.hpp  IncompressibleProblems.h  LinearTerm.h  LocalDofMapper.h  Mesh.h  MeshFactory.h  MeshTopology.h  MeshTopologyView.h  MinMaxFunctions.h  NavierStokesFormulation.h  ParametricCurve.h  (+29 more)
unit_tests/: BCTests.cpp  BFTests.cpp  BasisCacheTests.cpp  CMakeLists.txt  CompressibleNavierStokesConservationFormulationTests.cpp  CompressibleNavierStokesFormulationTests.cpp  ConstraintTests.cpp  ConvectionDiffusionReactionFormulationTests.cpp  DLSTests.cpp  DofOrderingFactoryTests.cpp  DofOrderingTests.cpp  ErrorIndicatorTests.cpp  FunctionTests.cpp  FunctionsTests.cpp  GDAMinimumRuleTests.cpp  GMGOperatorTests.cpp  GMGSolverTests.cpp  GoalOrientedTests.cpp  IdealMHDFormulationTests.cpp  LinearTermTests.cpp  MPIWrapperTests.cpp  MeshRefinementTests.cpp  MeshTests.cpp  MeshToolsTests.cpp  MeshTopologyViewTests.cpp  MeshTransferFunctionTests.cpp  NavierStokesVGPFormulationTests.cpp  RangeListTests.cpp  RefinementStrategyTests.cpp  RieszRepTests.cpp  SolutionTests.cpp  SpaceTimeHeatDivFormulationTests.cpp  SpaceTimeHeatFormulationTests.cpp  SpaceTimeTests.cpp  StokesVGPFormulationTests.cpp  TestsTemplate.cpp  VarFunctionTests.cpp
(+7 files in other folders)
