#project(BDrivers)

add_executable(LinearElasticity2D LinearElasticity2D.cpp)
add_executable(LinearElasticity3D LinearElasticity3D.cpp)
add_executable(LinearElasticity3DGMG LinearElasticity3DGMG.cpp)
add_executable(OldroydBDriver OldroydBDriver.cpp)
add_executable(GoalOrientedDPGDriver GoalOrientedDPGDriver.cpp)
add_executable(GoalOrientedOldroydBDriver GoalOrientedOldroydBDriver.cpp)

target_link_libraries(LinearElasticity2D Camellia)
target_link_libraries(LinearElasticity3D Camellia)
target_link_libraries(LinearElasticity3DGMG Camellia)
target_link_libraries(OldroydBDriver        Camellia)
target_link_libraries(GoalOrientedDPGDriver Camellia)
target_link_libraries(GoalOrientedOldroydBDriver Camellia)
